--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ h1{
     font-size: 50px;
 }
 
+h2{
+    font-weight: 800;
+    font-size: 50px;
+}
+
 h3{
     font-weight: bold;
     font-size: 30px;
@@ -18,6 +23,12 @@ h3{
 h4{
     font-weight: bold;
     font-size: 20px;
+}
+
+p{
+    font-weight: bold;
+    font-size: 30px;
+    margin: 30px 0;
 }
 
 .wrapper{
@@ -111,3 +122,65 @@ button.cta.alt{
     color: #111111;
 }
 
+nav{
+    height: 100px;
+    background-color: white;
+    box-shadow: 0 5px 8px rgba(0,0,0,.2);
+    position: sticky;top: 0;
+}
+
+nav .logo {
+    display: block;
+    width: 333px;
+    height: 78px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -40px;
+    margin-left: 30px;
+    background: url(img/logo.png) no-repeat 0 0;
+    background-size: 100%;
+    overflow: hidden;
+    text-indent: -9999px;
+}
+
+nav ul{
+    padding: 0;
+    margin: 0 20px 0 0;
+}
+
+nav ul li{
+    margin: 0;
+    padding: 0;
+    display: block;
+    float: right;
+}
+
+nav ul li a {
+    display: block;
+    height: 100%;
+    box-sizing: border-box;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #111111;
+    text-decoration: none;
+    padding: 35px 10px;
+    line-height: 30px;
+}
+
+.more-info{
+    text-align: center;
+}
+
+
+
+/* <div class="more-info" id = "more-info">
+        <h2>Join Our Fan Club</h2>
+        <p>
+            Every week we have <span class="highlight">a party</span>. If you want to join us then join our fan club.
+            Members will also receive pictures of us in all kinds of shapes and sizes. Cool
+            huh?
+        </p>
+        <button class="cta">Sign Me Up!!!</button>
+    </div> */
