--- a/style.css
+++ b/style.css
@@ -173,6 +173,22 @@ nav ul li a {
     text-align: center;
 }
 
+.more-info p{
+    margin: 18px 0 35px ;
+}
+
+.more-info h2{
+    margin: 50px 0 0 ;
+}
+
+.highlight{
+    background-color: #FFADF9;
+    color: #FF3300;
+    padding: 5px 10px;
+    line-height: 50px;
+    display:inline;
+    font-weight: 800;
+}
 
 
 /* <div class="more-info" id = "more-info">
